crosshair/examples/PEP316/bugs_detected/showcase.out
showcase.py:8: error: false when calling list_to_dict(s = (0, 0)) (which returns {0: 0})
showcase.py:16: error: false when calling consecutive_pairs(x = []) (which returns [])
showcase.py:26: error: false when calling higher_order(fn = lambda a: 42 if (a == 0) else (0)) (which returns 42)
showcase.py:35: error: false when calling append_fourtytwo_to_each(lists = [[], [], [0]])
